# rule-harness

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  Procfile  README.md  config.default.yaml  cowork_deploy.command  nixpacks.toml  pyproject.toml  railway.toml  redline_keywords.yaml  render.yaml  restart.sh  start.sh  theme_keys.yaml  v2.0防幻觉改造总结.md  改造方案_v1.2.md  规则梳理Harness-架构实现与规则输出控制指南.md
.devcontainer/: devcontainer.json
backend/: app.py  archive_engine.py  batch_persist.py  chunker.py  classifier.py  confidence.py  config.py  dedupe.py  document_profile.py  export_dicts.py  exporter.py  fidelity.py  fidelity_exceptions.yaml  folder_merge.py  genericize.py  harness.py  llm.py  merger.py  orchestrator.py  parsers.py  placeholder_detector.py  preview.py  prompt_loader.py  semantic_fidelity.py  skill_builder.py  state.py  storage.py  voice_check.py
docs/: dify-openapi.yaml  dify-workflow-导入与使用说明.md  dify-workflow-规则抽取-双模式.yml  dify-workflow-规则抽取-异步.yml  dify-workflow-规则抽取-稳定版.yml  dify-workflow-规则抽取-简化版.yml  dify-workflow-规则抽取.yml  dify-接入-小白操作手册.md  dify-接入方案-plan.md  dify接入方法论-实施方案.md  frontend-redesign-v2.md
frontend/: index.html  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1780882870689-21bc359e12ba5.mjs  vite.config.ts.timestamp-1781074384642-b8526243c714b.mjs
profiles/: IT.yaml  test.yaml  制造.yaml  医药.yaml  建工勘察设计.yaml  建筑.yaml  房地产.yaml  汽车.yaml  能源电力.yaml  金融.yaml
samples/: README.md  generate_samples.py  审查清单.xlsx  案例.txt  采购合同模板.docx
(+100 files in other folders)
