[project]
name = "rule-harness"
version = "0.1.0"
description = "规则梳理 Harness — Contract Rule Extraction System"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Rule Harness Team"}
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9.0",
    "aiofiles>=24.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "pyyaml>=6.0",
    "openai>=1.40.0",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
]

[project.scripts]
rule-harness = "backend.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]
markers = [
    "regression: 华润手册等历史样本的回归测试",
    "unit: 单元测试",
    "integration: 集成测试",
]
